--- a/addNewForms/addNewPhlebotomist.html
+++ b/addNewForms/addNewPhlebotomist.html
@@ -11,36 +11,19 @@
 </header>
 
 <div class="form-group p-4">
-    <h2>Add new appointment</h2>
+    <h2>Add new Phlebotomist</h2>
 
     <form action="" method="POST">
         <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">Patient</span>
-            <input type="text" class="form-control" placeholder="Patient Name" aria-label="first-name"
+            <span class="input-group-text" id="basic-addon1">Name</span>
+            <input type="text" class="form-control" placeholder="Name" aria-label="last-name"
                 aria-describedby="basic-addon1">
         </div>
 
         <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">Prep Nurse Name</span>
-            <input type="text" class="form-control" placeholder="Nurse Name" aria-label="last-name"
-                aria-describedby="basic-addon1">
+            <span class="input-group-text">SSN</span>
+            <input placeholder="123456789" type="text" class="form-control" aria-label="address">
         </div>
-
-        <div class="input-group mb-3">
-            <span class="input-group-text">Physician</span>
-            <input placeholder="physician name" type="text" class="form-control" aria-label="address">
-        </div>
-
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon3">Date</span>
-            <input type="date" value="yyyy-mm-dd" class="form-control" id="phone" aria-describedby="basic-addon3">
-        </div>
-
-        <div class="input-group mb-3">
-            <span class="input-group-text">Examination room</span>
-            <input type="text" class="form-control" placeholder="Room #">
-        </div>
-
         <button type="submit" class="btn btn-primary">Submit</button>
         <button class="btn btn-secondary" type="button" onclick="history.back()">Go back</button>
 
