--- a/addNewForms/addNewMedication.html
+++ b/addNewForms/addNewMedication.html
@@ -29,5 +29,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary">Submit</button>
+        <button class="btn btn-secondary" type="button" onclick="history.back()">Go back</button>
+
     </form>
 </div>
