--- a/addNewForms/addNewNurse.html
+++ b/addNewForms/addNewNurse.html
@@ -52,5 +52,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary">Submit</button>
+        <button class="btn btn-secondary" type="button" onclick="history.back()">Go back</button>
+
     </form>
 </div>
