--- a/index.html
+++ b/index.html
@@ -88,7 +88,12 @@
                 Appointments
               </a>
             </li>
-          </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="#bloodTransactions">
+                Blood Transactions
+              </a>
+            </li>
+          </ul>  
         </div>
       </nav>
 
@@ -224,6 +229,29 @@
                 <td>May 25 2022</td>
                 <td>301</td>
                 <td><button class="btn-sm btn-danger">cancel</td>
+                <td><button class="btn-sm btn-info text-white">update</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <div id="phlebotomistResults">
+          <br>
+          <a type="submit" class="btn btn-sm btn-primary" href="addNewForms/addNewPhlebotomist.html">Add new Phlebotomist</a>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">SSN</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Michael Jordan</td>
+                <td>123456789</td>
+                <td><button class="btn-sm btn-danger">delete</td>
                 <td><button class="btn-sm btn-info text-white">update</td>
               </tr>
             </tbody>
