--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <?php
 
 ob_start();
-require('config.inc.php');
+require('includes/config.inc.php');
 require(MYSQL);
 
 ?>
@@ -101,7 +101,7 @@ require(MYSQL);
                 Blood Transactions
               </a>
             </li>
-          </ul>  
+          </ul>
         </div>
       </nav>
 
@@ -111,26 +111,40 @@ require(MYSQL);
         <div class="results" id="physiciansResults">
           <br>
           <a type="submit" class="btn btn-sm btn-primary" href="addNewForms/addNewPhysician.html">Add New Physician</a>
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Name</th>
-                <th scope="col">Position</th>
-                <th scope="col">ssn</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark Otto</td>
-                <td>cardiology</td>
-                <td>123-45-6789</td>
-                <td><button class="btn-sm btn-danger">delete</td>
-                <td><button class="btn-sm btn-info text-white">update</td>
-              </tr>
-            </tbody>
-          </table>
+          <?php
+          // code that outputs the results for physician
+          // query for the physician
+          $query=	"SELECT *
+                  from physician 
+                  order by physid DESC";
+          $run = mysqli_query($dbc, $query) or trigger_error("Query: $query\n<br> MYSQL Error: ". mysqli_error($dbc));
+
+          if(@mysqli_num_rows($run) > 0) {
+            echo "<br>";
+            while($qpost = mysqli_fetch_assoc($run)) {
+                echo '    
+                <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Position</th>
+                    <th scope="col">ssn</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">$qpost[physid]</th>
+                    <td>$qpost[name]</td>
+                    <td>$qpost[position]</td>
+                    <td>$qpost[ssn]</td>
+                    <td><button class="btn-sm btn-danger">delete</td>
+                  </tr>
+                </tbody>
+              </table>';
+            }
+          }
+          ?>
         </div>
 
         <div class="results" id="nurseResults">
@@ -245,7 +259,8 @@ require(MYSQL);
 
         <div id="phlebotomistResults">
           <br>
-          <a type="submit" class="btn btn-sm btn-primary" href="addNewForms/addNewPhlebotomist.html">Add new Phlebotomist</a>
+          <a type="submit" class="btn btn-sm btn-primary" href="addNewForms/addNewPhlebotomist.html">Add new
+            Phlebotomist</a>
           <table class="table">
             <thead>
               <tr>
