--- a/results.html
+++ b/results.html
@@ -135,6 +135,85 @@
     </table>
 </div>
 
+<div id="phlebotomistResults">
+    <br>
+    <a type="submit" class="btn btn-sm btn-primary" href="addNewForms/addNewPhlebotomist.html">Add new
+      Phlebotomist</a>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Name</th>
+          <th scope="col">SSN</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Michael Jordan</td>
+          <td>123456789</td>
+          <td><button class="btn-sm btn-danger">delete</td>
+          <td><button class="btn-sm btn-info text-white">update</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div id="bloodbankResults">
+    <br>
+    <a type="submit" class="btn btn-sm btn-primary" href="addNewForms/addNewPhlebotomist.html">Add new
+      Blood Bank</a>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Name</th>
+          <th scope="col">SSN</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Michael Jordan</td>
+          <td>123456789</td>
+          <td><button class="btn-sm btn-danger">delete</td>
+          <td><button class="btn-sm btn-info text-white">update</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div id="donorResults">
+    <br>
+    <a type="submit" class="btn btn-sm btn-primary" href="addNewForms/addNewPhlebotomist.html">Add new
+      Donor</a>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">First Name</th>
+          <th scope="col">Last Name</th>
+          <th scope="col">Address</th>
+          <th scope="col">Email</th>
+          <th scope="col">Phone</th>
+          <th scope="col">Blood Type</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="col">1</th>
+          <td scope="col">Michael</td>
+          <td scope="col">Jordan</td>
+          <td scope="col">123 Main Street</td>
+          <td scope="col">example@email.com</td>
+          <td scope="col">(123)-456-7890</td>
+          <td>B+</td>
+          <td><button class="btn-sm btn-danger">delete</td>
+          <td><button class="btn-sm btn-info text-white">update</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 <script type="text/javascript">
 
     function myFunction() {
