adding update and delete scripts

--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@ require(MYSQL);
                     <td>$qpost[name]</td>
                     <td>$qpost[position]</td>
                     <td>$qpost[ssn]</td>
-                    <td><button class="btn-sm btn-danger">delete</td>
+                    <td><form action="deleteRecord.php" method="post"><button class="btn-sm btn-danger">delete</form></td>
+                    <td><form action="updateRecord.php" method="post"><button class="btn>-sm btn-info text-white">update</form></td>
+
                   </tr>
                 </tbody>
               </table>';
@@ -167,9 +169,9 @@ require(MYSQL);
                 <td>Otto</td>
                 <td>mdo</td>
                 <td>mdo</td>
-                <td><button class="btn-sm btn-danger">delete</td>
-                <td><button class="btn-sm btn-info text-white">update</td>
-              </tr>
+                <td><form action="deleteRecord.php" method="post"><button class="btn-sm btn-danger">delete</form></td>
+                  <td><form action="updateRecord.php" method="post"><button class="btn>-sm btn-info text-white">update</form></td>
+                  </tr>
             </tbody>
           </table>
         </div>
@@ -193,9 +195,9 @@ require(MYSQL);
                 <td>name of med</td>
                 <td>Brand Name</td>
                 <td>description</td>
-                <td><button class="btn-sm btn-danger">delete</td>
-                <td><button class="btn-sm btn-info text-white">update</td>
-              </tr>
+                <td><form action="deleteRecord.php" method="post"><button class="btn-sm btn-danger">delete</form></td>
+                  <td><form action="updateRecord.php" method="post"><button class="btn>-sm btn-info text-white">update</form></td>
+                  </tr>
             </tbody>
           </table>
         </div>
@@ -220,8 +222,8 @@ require(MYSQL);
                 <td>123 Main Street</td>
                 <td>123-456-7890</td>
                 <td>098765</td>
-                <td><button class="btn-sm btn-danger">delete</td>
-                <td><button class="btn-sm btn-info text-white">update</td>
+                <td><form action="deleteRecord.php" method="post"><button class="btn-sm btn-danger">delete</form></td>
+                <td><form action="updateRecord.php" method="post"><button class="btn>-sm btn-info text-white">update</form></td>
               </tr>
             </tbody>
           </table>
@@ -250,9 +252,9 @@ require(MYSQL);
                 <td>dr. phil</td>
                 <td>May 25 2022</td>
                 <td>301</td>
-                <td><button class="btn-sm btn-danger">cancel</td>
-                <td><button class="btn-sm btn-info text-white">update</td>
-              </tr>
+                <td><form action="deleteRecord.php" method="post"><button class="btn-sm btn-danger">cancek</form></td>
+                  <td><form action="updateRecord.php" method="post"><button class="btn>-sm btn-info text-white">update</form></td>
+                  </tr>
             </tbody>
           </table>
         </div>
@@ -274,9 +276,9 @@ require(MYSQL);
                 <th scope="row">1</th>
                 <td>Michael Jordan</td>
                 <td>123456789</td>
-                <td><button class="btn-sm btn-danger">delete</td>
-                <td><button class="btn-sm btn-info text-white">update</td>
-              </tr>
+                <td><form action="deleteRecord.php" method="post"><button class="btn-sm btn-danger">delete</form></td>
+                  <td><form action="updateRecord.php" method="post"><button class="btn>-sm btn-info text-white">update</form></td>
+                  </tr>
             </tbody>
           </table>
         </div>
