--- a/results.html
+++ b/results.html
@@ -21,27 +21,28 @@
 </div>
 
 <div id="nurseResults">
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Name</th>
-                <th scope="col">Position</th>
-                <th scope="col">Registered</th>
-                <th scope="col">SSN</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>mdo</td>
-                <td>mdo</td>
-                <td><button class="btn-sm btn-danger">delete</td>
-            </tr>
-        </tbody>
-    </table>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Name</th>
+        <th scope="col">Position</th>
+        <th scope="col">Registered</th>
+        <th scope="col">SSN</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>mdo</td>
+        <td>mdo</td>
+        <td><form action="deleteRecord.php" method="post"><button class="btn-sm btn-danger">delete</form></td>
+          <td><form action="updateRecord.php" method="post"><button class="btn>-sm btn-info text-white">update</form></td>
+          </tr>
+    </tbody>
+  </table>
 </div>
 
 <div id="medicationResults">
